--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -52,13 +52,13 @@
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
     const ordered = inventors.sort((a,b)=> a.year>b.year?1:-1);
-    console.table(ordered);
+    console.table({ordered});
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
     const totalYears = inventors.reduce((total,inventor)=>{
       return total + inventor.passed - inventor.year;
-    },0);
+    },0);   
     console.log(totalYears);
 
     // 5. Sort the inventors by years lived
@@ -98,7 +98,7 @@
       obj[item]++;
       return obj;
     },{});
-    console.log(transportation);
+    console.log({transportation});
   </script>
 </body>
 </html>
